*** empty log message ***
svn path=/trunk/kdeextragear-libs-1/doc/kipi-plugins/; revision=407085

--- a/sendimages.docbook
+++ b/sendimages.docbook
@@ -81,7 +81,7 @@ Select your favorite e-mail client from the drop-down menu. (If you use <applica
 </para>
 
 <note><para>
-If you uwant to use GMail service, you need to install <application>GMailAgent</application> in your computer, available at <ulink url="http://gmailagent.sourceforge.net">this url.</ulink>.
+If you want to use GMail service, you need to install <application>GMailAgent</application> in your computer, available at <ulink url="http://gmailagent.sourceforge.net">this url</ulink>.
 </para></note>
 
 <para>
