--- a/index.docbook
+++ b/index.docbook
@@ -11,6 +11,7 @@
  <!ENTITY doc-effectimages SYSTEM "effectimages.docbook">
  <!ENTITY doc-filterimages SYSTEM "filterimages.docbook">
  <!ENTITY doc-findduplicateimages SYSTEM "findduplicateimages.docbook">
+ <!ENTITY doc-flickrexport SYSTEM "flickrexport.docbook">
  <!ENTITY doc-galleryexport SYSTEM "galleryexport.docbook">
  <!ENTITY doc-imagesgallery SYSTEM "imagesgallery.docbook">
  <!ENTITY doc-jpeglossless SYSTEM "jpeglossless.docbook">
@@ -117,6 +118,9 @@ The plugins installed in this handbook are:
 <para><link linkend="findduplicateimages">Find Duplicate Images plugin</link></para>
 </listitem>
 <listitem>
+<para><link linkend="flickrexport">Remote Flickr Export plugin</link></para>
+</listitem>
+<listitem>
 <para><link linkend="galleryexport">Remote Gallery Export plugin</link></para>
 </listitem>
 <listitem>
@@ -170,6 +174,7 @@ The plugins installed in this handbook are:
 &doc-effectimages;
 &doc-filterimages;
 &doc-findduplicateimages;
+&doc-flickrexport;
 &doc-galleryexport;
 &doc-imagesgallery;
 &doc-jpeglossless;
