fix screenshot link
svn path=/trunk/extragear/libs/doc/kipi-plugins/; revision=458152

--- a/flickrexport.docbook
+++ b/flickrexport.docbook
@@ -56,8 +56,8 @@
   </para>
   
   <figure>
-      <title>The Successful Signup Flickr page</title>
-      <graphic srccredit="The Successful Signup Flickr page" fileref="authenticated.png"/>
+      <title>The Successfull Signup Flickr page</title>
+      <graphic srccredit="The Successfull Signup Flickr page" fileref="flickrauthenticated.png"/>
   </figure>
   
   <para>
