--- a/flickrexport.docbook
+++ b/flickrexport.docbook
@@ -37,48 +37,69 @@
   The FlickrExport plugin can be used to upload image collection from your host to the remote flickr server using internet.
   </para>
 
-<sect1 id="using-plugin-flickrexport">
-  <title>Using the plugin</title>
+<sect1 id="using-plugin-flickrexport"> 
+  <title>Plugin intialization on First access</title>
   
   <para>
   On accessing the plugin for the first time the user is taken through the process of obtaining a token. Which is used for authentication purposes.
-  Following dialog will popup and a browser window will be launched where user will signup in to flickr.com.
+  Following dialog will popup and a browser window will be launched where user will signup in to <ulink url="http://www.flickr.com">Flickr</ulink>.
   </para>
   
   <figure>
-      <title>The Sign Up Dialog Preview</title>
-      <graphic srccredit="The Sign Up Dialog Preview" fileref="flickrsignup.png"/>
+      <title>The First Sign Up Dialog Preview</title>
+      <graphic srccredit="The First Sign Up Dialog Preview" fileref="flickrexportsignup.png"/>
   </figure>
   
   <para>
-  On successful signup FlickrUploadr will be allowed to send photos to flickr.com website. The user will be presented with the following page on
+  On successful signup FlickrUploadr will be allowed to send photos to flickr website. The user will be presented with the following page on
   successful signup.
   </para>
   
   <figure>
       <title>The Successfull Signup Flickr page</title>
-      <graphic srccredit="The Successfull Signup Flickr page" fileref="flickrauthenticated.png"/>
+      <graphic srccredit="The Successfull Signup Flickr page" fileref="flickrexportauthenticated.png"/>
   </figure>
   
   <para>
-  Simply close the browser windows and return to the host application Dialog. On clicking <guilabel>Yes</guilabel>, user will see the interface to upload photos to Flickr.
+  Simply close the browser windows and return to the host application Dialog. On clicking <guilabel>Yes</guilabel>, user will see the interface to upload photos to Flickr. Described in the next section.
   </para>
 
 </sect1>
 
+<sect1 id="uploading-using-plugin-flickrexport"> 
+<title>The Regular Plugin Usage</title>
 
-<sect1 id="uploading-plugin-flickrexport">
-  <title>The Main Uploading Dialog</title>
   
+  <para>
+   When the flickrexport plugin is invoked for second time or later the user is greeted with the following dialog, which shows the current access permissions flickrexport plugin has. The uploading process requires "write" permissions. The plugin doesn't allow any other permission as of now. User is asked if he wants to proceed with his current permissions.
+    </para>
+     <figure>
+      <title>Current Permissions Dialog preview</title>
+      <graphic srccredit="The " fileref="flickrexportcontinue.png"/>
+  </figure>
+
+      <para>
+   On clicking <guilabel>Yes</guilabel>, user will see the interface to upload photos to Flickr. 
+   </para>
+   <para>
+   On clicking <guilabel>No</guilabel>, the authentication process is repeated.
+  </para>
+  
+      <para>
+  This Main upload dialog is shown belows.
+  </para>
+  
+  	
   <figure>
       <title>The Main Uploading Dialog Preview</title>
-      <graphic srccredit="The Main Uploading Dialog Preview" fileref="flickruploadingdialog.png"/>
+      <graphic srccredit="The Main Uploading Dialog Preview" fileref="flickrexportuploaddialog.png"/>
   </figure>
   
   <para>
-  This dialog give the following options to set properly the image collections uploading:
+  The <guilabel>Add Photos</guilabel> button should be clicked once user has set in the other options in the dialog. On clicking this button user a image selector dialog opens up, user can select the photos he wants to upload and click ok. On clicking ok the image uploading starts.
   </para>
   
+
   <para>
   The <guilabel>Tags</guilabel> field can be filled with a series of words (comma seperated) which will be assigned as tags to the images uploaded.
   </para>
@@ -88,16 +109,25 @@
   </para>
   
   <para>
-  If the <guilabel>Resize photos Before Uploading</guilabel> option is selected, the photos will be resized before uploading. The values will be read from the <guilabel>Maximum Dimension</guilabel> combobox.
+  If the <guilabel>Resize photos before uploading</guilabel> option is selected, the photos will be resized before uploading. The values will be read from the <guilabel>Maximum dimension</guilabel> combobox.
   </para>
   
   <para>
   The <guilabel>Maximum Dimension</guilabel> combobox can be used to adjust the maximum height to which the photos will be resized before uploading. The width calculation will be done so as to have the aspect ratio conserved.
   </para>
   
+ <figure>
+      <title>The Uploading Progress Dialog Preview</title>
+      <graphic srccredit="The Uploading Progress Dialog Preview" fileref="flickrexportuploading.png"/>
+  </figure>
+  <para>
+ User can click <guilabel>Cancel</guilabel> button to abort the uploading of photos.
+</para>
+
+<para>
+Finally user can view the uploaded photos by visting <ulink url="http://www.flickr.com">Flickr</ulink> website.
+</para>
 </sect1>
-
-
 
 </chapter>
 
@@ -105,6 +135,6 @@
 Local Variables:
 mode: sgml
 sgml-omittag: nil
-sgml-shorttag: t
+sgml-shorttag: ts
 End:
 -->
