--- a/index.docbook
+++ b/index.docbook
@@ -157,7 +157,7 @@ The plugins installed in this handbook are:
 <para><link linkend="slideshow">Slide Show plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="timeadjust">Time Ajust plugin</link></para>
+<para><link linkend="timeadjust">Time Adjust plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="wallpaper">Wall Paper plugin</link></para>
