--- a/README
+++ b/README
@@ -1,11 +1,13 @@
 Handbook README:
 ----------------
 
-* How to Make Screenshot for Manual with Alpha Blending Border:
+>>> How to Make Screenshot for Manual with Alpha Blending 3D Border <<<
+
+- Never use advanced color theme to make screenshots. Always use KDE default color.
 
 - Use KSnapshot for take a shot. Use region selection option for take only 
   important area. Remove buttons and dialog hearder for limit image file size.
-  Only use PNG file format to save.
+  _ALWAYS use PNG file format to save image.
 
 - Open your screenshot in Gimp 2.0 and make operations below:
 
@@ -24,8 +26,11 @@ Handbook README:
       -> Allow Resizing = On
    * Save target image in PNG with max compression (Compression Level = 9)
    
+Note : A gimp2.2 script from Gerhard Kulzer can be use to add Alpha Blending 3D Border around screenshots. 
+       Always use default settings. Script can be downloaded from this url:
+       
+http://digikam3rdparty.free.fr/Tools/printscreen-to-manual.scm
       
-      
-      
+Gilles Caulier <caulier dot gilles at free dot fr>      
       
             
