Typo corrected 'addressee'
svn path=/trunk/extragear/libs/doc/kipi-plugins/; revision=463807

--- a/sendimages.docbook
+++ b/sendimages.docbook
@@ -54,7 +54,7 @@ will be removed from the send list.
 
 <para>
 When you have finished selecting your files, click <guilabel>OK</guilabel> to open the 'new e-mail' dialog window 
-of your favorite e-mail client. You just need to add the addresses and the subject. The selected images will be already there as attachments. 
+of your favorite e-mail client. You just need to add the addressee and the subject. The selected images will be already there as attachments. 
 </para>
 
 <warning><para>
