fix typo: s/alway/always/
CCMAIL: Gilles Caulier <caulier.gilles@free.fr>

svn path=/trunk/extragear/libs/doc/kipi-plugins/; revision=464864

--- a/rawconverter.docbook
+++ b/rawconverter.docbook
@@ -50,7 +50,7 @@ Select the RAW file to convert and open the plugin from the host application. Th
 </para>
 
 <para>
-Now you can adjust the available check and value boxes to optimise the conversion process. The first checkbox indicates to use the camera settings for white balance. The essential parameters like brightness, and red/blue amplifier may be adjusted. If the result is not quite optimal, don't worry, it is alway possible to finetune the image later on. 
+Now you can adjust the available check and value boxes to optimise the conversion process. The first checkbox indicates to use the camera settings for white balance. The essential parameters like brightness, and red/blue amplifier may be adjusted. If the result is not quite optimal, don't worry, it is always possible to finetune the image later on. 
 </para>
 
 <para>
