--- a/README
+++ b/README
@@ -29,8 +29,13 @@ Handbook README:
 Note : A gimp2.2 script from Gerhard Kulzer can be use to add Alpha Blending 3D Border around screenshots. 
        Always use default settings. Script can be downloaded from this url:
        
-http://digikam3rdparty.free.fr/Tools/printscreen-to-manual.scm
-      
-Gilles Caulier <caulier dot gilles at free dot fr>      
-      
-            
+http://digikam3rdparty.free.fr/Tools/kde-screenshot-dropshadow.scm
+
+ !----------Important-------------!
+Since the documentation is very good it is also very demanding in terms of volume, 99% whereof are screenshots. In order to limit the byte count to the minimum the following command chain shall be used to reduce the png file size. A factor of 2-4 can be gained. From within the folder where the png reside issue this command (requires pngnq and optipng to be installed on the system):
+
+pngnq -s 1 ./*.png && optipng *-nq8.png && rename -f s/-nq8\.png/.png/ *-nq8.png
+
+
+Gilles Caulier <caulier dot gilles at gmail dot com>
+Gerhard Kulzer <gerhard at kulzer dot net>
